fix: hooks and at more settings

--- a/config/NoGoogleMapsSkyrim.ini
+++ b/config/NoGoogleMapsSkyrim.ini
@@ -1,3 +1,5 @@
 ﻿[General]
 HidePlayerMapMarker=true
+HideCompassMapMarkers=true
+HideCompassQuestTargetMarker=true
 MapMarkerReference=0x0162CE|Skyrim.esm
