--- a/config/NoGoogleMapsSkyrim.ini
+++ b/config/NoGoogleMapsSkyrim.ini
@@ -2,4 +2,5 @@
 HidePlayerMapMarker=true
 HideCompassMapMarkers=true
 HideCompassQuestTargetMarker=true
+RequiredQuestTargetDistance=25000.0
 MapMarkerReference=0x0162CE|Skyrim.esm
